--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#exp">Reportes</a>
                 </li>
                 <li>
-                    <a href="#">Bitacoras</a>
+                    <a href="#btc">Documentacion</a>
                 </li>
                 <li>
                     <a href="#">Subir Tickets</a>
@@ -40,14 +40,139 @@
             </div>
             <div class="extracto-info">
                 <p>
-                    Con más de 6 años de experiencia en el mercado nacional e internacional, SISTEMECUADOR S.A. es una empresa en constante innovación de procesos y servicios que ayuda al crecimiento de sus clientes sin afectar el Core del negocio, a través de un ecosistema de interacciones multicanal significativas aplicadas en una sólida infraestructura tecnológica.
+                    Con más de 6 años de reporte en el mercado nacional e internacional, SISTEMECUADOR S.A. es una empresa en constante innovación de procesos y servicios que ayuda al crecimiento de sus clientes sin afectar el Core del negocio, a través de un ecosistema de interacciones multicanal significativas aplicadas en una sólida infraestructura tecnológica.
                 </p>
             </div>
         </section>
-        <section class="experiencia" id="exp">
-            <div class="experiencia-titulo">
+        <section class="reportes" id="exp">
+            <div class="reportes-titulo">
                 <h1>Reportes</h1>
-            </div>            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>TT Abiertos</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>En este formulario solo se llenaran casos que fueron escalados al lead de ventas y el tt aun sigue abierto. <br/>Si el caso fue cerrado sin ningún tipo de solución al cliente o se valide en ROPA que no esta ingresada la petición, se deberá ingresar nuevamente el escalamiento y registrar los datos. <br> Recordar que el cliente debe enviar la documentación respectiva de acuerdo al requerimiento del cliente</p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3CmV7a-y8khuTeY1A41Qf6VMuC8KEk15DU6y70sgOlGliuA/viewform" target="_blank">link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Productos Nuevos</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>
+                                1. En este formulario solo se llenaran casos cuando no se pueda escalar al lead de ventas o cuando no tenga producto asociado en OMNICANAL. <br>
+                                2. Los casos que ya fueron escalados al lead de ventas y cerrados sin ninguna petición en Ropa, se debera llenar el formulario de CONSOLIDADO TT ABIERTOS SIN ATENCIÓN LEAD VENTAS <br>
+                                3. Recordar que el cliente debe enviar la documentación respectiva de acuerdo al requerimiento del cliente
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc_4net7It1goapxRVEuaR24QSmJCv5d4syFrYGa_XLlCr5Cg/viewform" 
+                                    target="_blank">link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+        </section>
+        <section class="reportes" id="btc">
+            <div class="reportes-titulo">
+                <h1>Documentacion</h1>
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Bitacora Coactivas</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>LLenar documentacion y reportar cuando el cliente cuenta con un proceso de coactiva-extrajudicial y tiene la intension de pagar</p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="./documentacion/BITACORA PROCESO DE COACTIVAS Y EXTRAJUDICIAL.xlsx">Descargar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Material BAF</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>Manual de Procesos BAF <br>
+                                Procedimientos <br>
+                                Configuración de routers</p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="./documentacion/MATERIAL DE BAF.pdf">Descargar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Guia Comercial</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>Manual de Procesos BAF <br>
+                                Procedimientos <br>
+                                Configuración de routers</p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="./documentacion/MATERIAL DE BAF.pdf">Descargar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Manual de Procedimientos</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>Manual de Procesos BAF <br>
+                                Procedimientos <br>
+                                Configuración de routers</p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="./documentacion/MATERIAL DE BAF.pdf">Descargar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+
         </section>
     </div>
     <footer class="footer">Footer</footer>
