--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@
                     <p>Mayo 2020</p>
                 </div>                            
             </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>VT No Atendidas</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>
+                                En este formulario se deben llenar los casos con vt pendientes fuera de lapso de atención, no aplica para eventos masivos o estado Probado
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTyVgWUiXo3EvQi63bgTncNhTEap4Xwk9Ly3ZRAGEuI68nsw/viewform" 
+                                    target="_blank">link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
         </section>
         <section class="reportes" id="btc">
             <div class="reportes-titulo">
