--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
-                            <h2>Bitacora Coactivas</h2>
+                            <h2>Coactivas</h2>
                         </div>
                         <div class="reporte-descripcion">
-                            <p>LLenar documentacion y reportar cuando el cliente cuenta con un proceso de coactiva-extrajudicial y tiene la intension de pagar</p>
+                            <p> CARTERA TEMPRANA:  Cuando el cliente mantiene mas de 2 factura vencidas pero no esta inactivo. Esto solo si el cliente no tiene ningún medio para poder cancelar <br>
+                                PROCESO EXTRAJUDICIAL: Servicio RETIRADO, se ha generado un DUMMY y un Titulo de crédito<br>
+                                PROCESO COACTIVA: Servicio RETIRADO, se ha generado un DUMMY y se han tomado medidas cautelares como (BLOQUEO DE CUENTAS BANCARIAS)</p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="./documentacion/BITACORA PROCESO DE COACTIVAS Y EXTRAJUDICIAL.xlsx">Descargar</a>
+                                    <a href=" http://200.107.17.189:8080/elFinder/files/bitcoactiva/gestion/login.php" target="_blank">link</a>
                                 </div>
                             </div>
                         </div>
@@ -140,12 +142,10 @@
                             <h2>Material BAF</h2>
                         </div>
                         <div class="reporte-descripcion">
-                            <p>Manual de Procesos BAF <br>
-                                Procedimientos <br>
-                                Configuración de routers</p>
+                            <p>En esta seccion podran descarar el archivo material baf donde se genraliza todos los procesos tecnicos, comercial e informacion a tener en cuenta.</p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="./documentacion/MATERIAL DE BAF.pdf">Descargar</a>
+                                    <a href="./documentacion/MATERIAL DE BAF.pdf" target="_blank">Descargar</a>
                                 </div>
                             </div>
                         </div>
@@ -160,12 +160,16 @@
                             <h2>Guia Comercial</h2>
                         </div>
                         <div class="reporte-descripcion">
-                            <p>Manual de Procesos BAF <br>
-                                Procedimientos <br>
-                                Configuración de routers</p>
+                            <p>
+                                En esta sección encontrar podrán descargar un archivo comprimido, con la siguiente información: <br>
+                                - Guia comercial Mayo<br>
+                                - Proceso Emergente de recaudación<br>
+                                - Actualización de conocimiento Mayo<br>
+                                - Cambio de forma de pago
+                            </p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="./documentacion/MATERIAL DE BAF.pdf">Descargar</a>
+                                    <a href="./documentacion/GUÍA COMERCIAL MAYO 2020 (MASIVA) (1).pdf" target="_blank">Descargar</a>
                                 </div>
                             </div>
                         </div>
@@ -180,12 +184,10 @@
                             <h2>Manual de Procedimientos</h2>
                         </div>
                         <div class="reporte-descripcion">
-                            <p>Manual de Procesos BAF <br>
-                                Procedimientos <br>
-                                Configuración de routers</p>
+                            <p>En esta sección encontraran los procesos técnicos que se deben de realizar para cada escenario, adicional procesos de gestión desde el inicio de la llamada hasta el final y que script se deben aplicar en cada escenario puntual.</p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="./documentacion/MATERIAL DE BAF.pdf">Descargar</a>
+                                    <a href="./documentacion/MANUAL DE CAMPAÑA BANDA ANCHA FIJA N1 29_04_2020_PDF.pdf"target="_blank">Descargar</a>
                                 </div>
                             </div>
                         </div>
