--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <div class="principal-presentacion">
                 <p>#QuedateEnCasa <strong class="presentacion-nombre">SistemEcuador</strong><br/>Soporte BAF<br>modalidad  <strong class="presentacion-info">Teletrabajo</strong></p>
             </div>
-            <div class="imagen"></div>
+            <div class="imagen">
+                <img src="./images/portada.jpeg" alt="Portada">
+            </div>
         </section>
         <section class="extracto">
             <div class="extracto-titulo">
