--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#btc">Documentacion</a>
                 </li>
                 <li>
-                    <a href="#">Subir Tickets</a>
+                    <a href="https://drive.google.com/open?id=10U5sWiDzBFbAdVsgnTLpRdDXkrx5P0dLQ2CXLkP1QOY" target="_blank">Registrar Casos</a>
                 </li>            
             </ol>
         </nav>
