--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#btc">Documentacion</a>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/open?id=10U5sWiDzBFbAdVsgnTLpRdDXkrx5P0dLQ2CXLkP1QOY" target="_blank">Registrar Casos</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdlTk5V8aqpDnyaPu3eMQighhNn80Ka3DDWG0HC0Opq3XY9bg/viewform?usp=sf_link" target="_blank">Registrar Casos</a>
                 </li>            
             </ol>
         </nav>
