Mejora en reportes

--- a/index.html
+++ b/index.html
@@ -112,6 +112,31 @@
                     <p>Mayo 2020</p>
                 </div>                            
             </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Consolidado Coactivas</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>
+                                En este formulario se deberá registrar los casos de: <br>
+                                -CARTERA TEMPRANA <br>
+                                -EXTRAJUDICIAL<br>
+                                -COACTIVAS<br>
+                                -DIFERIMIENTOS DE EQUIPOS
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeDYIylQCiustXhOvZugRE3-85pQHKbVHK4kD_8t0G3cgC7Gw/viewform?usp=sf_link" 
+                                    target="_blank">link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
         </section>
         <section class="reportes" id="btc">
             <div class="reportes-titulo">
