--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                     </div>                
-                    <p>Mayo 2020</p>
+                    <p>Diciembre 2018</p>
                 </div>                            
             </div>
             <div class="reporte-nuevo">
