Mejora en Presentacion y Tickets

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
-                            <h2>TT Abiertos</h2>
+                            <h2>Tickets  Abiertos</h2>
                         </div>
                         <div class="reporte-descripcion">
                             <p>En este formulario solo se llenaran casos que fueron escalados al lead de ventas y el tt aun sigue abierto. <br/>Si el caso fue cerrado sin ningún tipo de solución al cliente o se valide en ROPA que no esta ingresada la petición, se deberá ingresar nuevamente el escalamiento y registrar los datos. <br> Recordar que el cliente debe enviar la documentación respectiva de acuerdo al requerimiento del cliente</p>
@@ -129,6 +129,27 @@
                             <div class="botones">
                                 <div class="botton">
                                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeDYIylQCiustXhOvZugRE3-85pQHKbVHK4kD_8t0G3cgC7Gw/viewform?usp=sf_link" 
+                                    target="_blank">link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Peticiones Pendientes</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>
+                                En este formulario se llenarán los casos pendientes en Ropa fuera del lapso de atención con cordenes generadas
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSceLDjFUDHh7pfz3WWuN8nJdObhcRI15GDeA2cwVluWJxjjbA/viewform" 
                                     target="_blank">link</a>
                                 </div>
                             </div>
