Agg Regularización Gpon 20x20

--- a/index.html
+++ b/index.html
@@ -188,6 +188,27 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
+                            <h2>Regularización Gpon 20x20</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>En este consolidado encontraran ls clientes que ya se encuentra realizado el aumento de velocidad GPON 10 mg a 20 mg <br>
+                                - Si el cliente no refleja en la data aplicar script <br>
+                                - Si el cliente consta en la data informarle que ya se le realizo el aumento.
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="./documentacion/Clientes Regularizar a 20Mbps 12-may-20 (3).xlsx" target="_blank">Descargar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Mayo 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
                             <h2>Material BAF</h2>
                         </div>
                         <div class="reporte-descripcion">
