--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <nav class="menu-header">
             <ol>
                 <li>
+                    <a href="./pages/aplicativos.html">Aplicativos</a>
+                </li>   
+                <li>
                     <a href="#exp">Reportes</a>
                 </li>
                 <li>
@@ -23,7 +26,7 @@
                 </li>
                 <li>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdlTk5V8aqpDnyaPu3eMQighhNn80Ka3DDWG0HC0Opq3XY9bg/viewform?usp=sf_link" target="_blank">Registrar Casos</a>
-                </li>            
+                </li>         
             </ol>
         </nav>
     </header>
