--- a/pages/aplicativos.html
+++ b/pages/aplicativos.html
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://200.107.17.189:8080/elFinder/files/fortuito/piloto/login.php" 
+                        <a href="https://gis.cnt.gob.ec/appgeoportal/?u=-78.48430,-0.19024,17" 
                             target="_blank">
                             <div class="app">
                                 <img src="../images/apps/GIS.png" alt="APLICACIONES WEB">
