--- a/index.html
+++ b/index.html
@@ -271,6 +271,6 @@
 
         </section>
     </div>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">byrongamboa</footer>
 </body>
 </html>
