--- a/index.html
+++ b/index.html
@@ -145,6 +145,29 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
+                            <h2>Ordenes de Retiro</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>
+                                En este formulario se deberá registrar los casos de: <br>
+                                -ORDENES DE RETIRO PENDIENTES DE ATENCIÓN EN SCQU. <br>
+                                -ORDENES DE RETIRO QUE USTEDES GENEREN EN SCQU.
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN07B_YUXoY1GlWAyNozyOnCXFgjsY_xjSfcTje2j6tK9UaA/viewform" 
+                                    target="_blank">link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Junio 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
                             <h2>Peticiones Pendientes</h2>
                         </div>
                         <div class="reporte-descripcion">
@@ -171,20 +194,42 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
-                            <h2>Coactivas</h2>
+                            <h2>Aperturas de Agencias</h2>
                         </div>
                         <div class="reporte-descripcion">
-                            <p> CARTERA TEMPRANA:  Cuando el cliente mantiene mas de 2 factura vencidas pero no esta inactivo. Esto solo si el cliente no tiene ningún medio para poder cancelar <br>
-                                PROCESO EXTRAJUDICIAL: Servicio RETIRADO, se ha generado un DUMMY y un Titulo de crédito<br>
-                                PROCESO COACTIVA: Servicio RETIRADO, se ha generado un DUMMY y se han tomado medidas cautelares como (BLOQUEO DE CUENTAS BANCARIAS)</p>
+                            <p> Listado de Agencias en la Fase de Apertura 1</p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href=" http://200.107.17.189:8080/elFinder/files/bitcoactiva/gestion/login.php" target="_blank">link</a>
+                                    <a href="./documentacion/APERTURA CENTROS DE ATENCIÓN PRESENCIAL.xlsx" target="_blank">link</a>
                                 </div>
                             </div>
                         </div>
                     </div>                
-                    <p>Mayo 2020</p>
+                    <p>Junio 2020</p>
+                </div>                            
+            </div>
+            <div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Guia Comercial</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>
+                                En esta sección encontrar podrán descargar un archivo comprimido, con la siguiente información: <br>
+                                - Guia comercial Junio<br>
+                                - Nuevas Ofertas<br>
+                                - Actualización de conocimiento Junio<br>
+                                - Cambio de forma y medios de pagos
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="./documentacion/GUÍA COMERCIAL JUNIO 2020 (MASIVA).pdf" target="_blank">Descargar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Junio 2020</p>
                 </div>                            
             </div>
             <div class="reporte-nuevo">
@@ -230,30 +275,6 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
-                            <h2>Guia Comercial</h2>
-                        </div>
-                        <div class="reporte-descripcion">
-                            <p>
-                                En esta sección encontrar podrán descargar un archivo comprimido, con la siguiente información: <br>
-                                - Guia comercial Mayo<br>
-                                - Proceso Emergente de recaudación<br>
-                                - Actualización de conocimiento Mayo<br>
-                                - Cambio de forma de pago
-                            </p>
-                            <div class="botones">
-                                <div class="botton">
-                                    <a href="./documentacion/GUÍA COMERCIAL MAYO 2020 (MASIVA) (1).pdf" target="_blank">Descargar</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>                
-                    <p>Mayo 2020</p>
-                </div>                            
-            </div>
-            <div class="reporte-nuevo">
-                <div class="reporte-labor">
-                    <div class="detalles-labor">
-                        <div class="reporte-nombre">
                             <h2>Manual de Procedimientos</h2>
                         </div>
                         <div class="reporte-descripcion">
@@ -268,7 +289,6 @@
                     <p>Mayo 2020</p>
                 </div>                            
             </div>
-
         </section>
     </div>
     <footer class="footer">byrongamboa</footer>
