--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
-                            <h2>VT No Atendidas</h2>
+                            <h2>Llamadas Colgadas</h2>
                         </div>
                         <div class="reporte-descripcion">
                             <p>
-                                En este formulario se deben llenar los casos con vt pendientes fuera de lapso de atención, no aplica para eventos masivos o estado Probado
+                                En este formulario se deberán registrar las llamadas con estado desconexión local indicando porque motivo fue el cierre
                             </p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTyVgWUiXo3EvQi63bgTncNhTEap4Xwk9Ly3ZRAGEuI68nsw/viewform" 
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdZ6CedZz78lrZaM_SeLpM-EEUPWGIU5YRquun8G8sduwWiBg/viewform" 
                                     target="_blank">link</a>
                                 </div>
                             </div>
