UPDATE INDEX - CHECK LIST Y GUIA RAPIDA

--- a/index.html
+++ b/index.html
@@ -236,21 +236,19 @@
                 <div class="reporte-labor">
                     <div class="detalles-labor">
                         <div class="reporte-nombre">
-                            <h2>Regularización Gpon 20x20</h2>
+                            <h2>Guía Rápida</h2>
                         </div>
                         <div class="reporte-descripcion">
-                            <p>En este consolidado encontraran ls clientes que ya se encuentra realizado el aumento de velocidad GPON 10 mg a 20 mg <br>
-                                - Si el cliente no refleja en la data aplicar script <br>
-                                - Si el cliente consta en la data informarle que ya se le realizo el aumento.
+                            <p>Guía rápida de los procesos y escalamientos que se efectúan a las diferentes áreas, esto con el fin de reducir los escalamientos erróneos e innecesarios.
                             </p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="./documentacion/Clientes Regularizar a 20Mbps 12-may-20 (3).xlsx" target="_blank">Descargar</a>
+                                    <a href="./documentacion/GUIA RAPIDA CAMPAÑA BAF.pdf" target="_blank">Descargar</a>
                                 </div>
                             </div>
                         </div>
                     </div>                
-                    <p>Mayo 2020</p>
+                    <p>Junio 2020</p>
                 </div>                            
             </div>
             <div class="reporte-nuevo">
@@ -269,6 +267,25 @@
                         </div>
                     </div>                
                     <p>Diciembre 2018</p>
+                </div>                            
+            </div>
+<div class="reporte-nuevo">
+                <div class="reporte-labor">
+                    <div class="detalles-labor">
+                        <div class="reporte-nombre">
+                            <h2>Check list</h2>
+                        </div>
+                        <div class="reporte-descripcion">
+                            <p>El material servirá de apoyo para que el asesor se guie con un check list de los diferentes escenarios técnicos que se pueden presentar
+                            </p>
+                            <div class="botones">
+                                <div class="botton">
+                                    <a href="./documentacion/CHECK LIST - ESCENARIOS TECNICOS.pdf" target="_blank">Descargar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+                    <p>Junio 2020</p>
                 </div>                            
             </div>
             <div class="reporte-nuevo">
