--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
                             <h2>Aperturas de Agencias</h2>
                         </div>
                         <div class="reporte-descripcion">
-                            <p> Listado de Agencias en la Fase de Apertura 1</p>
+                            <p> Agencias Disponibles, el cliente debe tener agendado una cita previamente</p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="./documentacion/APERTURA CENTROS DE ATENCIÓN PRESENCIAL.xlsx" target="_blank">link</a>
+                                    <a href="https://www.cnt.gob.ec/reapertura-cnt" target="_blank">link</a>
                                 </div>
                             </div>
                         </div>
                     </div>                
-                    <p>Junio 2020</p>
+                    <p>Septiembre 2020</p>
                 </div>                            
             </div>
             <div class="reporte-nuevo">
@@ -261,12 +261,12 @@
                             <p>En esta seccion podran descarar el archivo material baf donde se genraliza todos los procesos tecnicos, comercial e informacion a tener en cuenta.</p>
                             <div class="botones">
                                 <div class="botton">
-                                    <a href="./documentacion/MATERIAL DE BAF.pdf" target="_blank">Descargar</a>
+                                    <a href="./documentacion/MATERIAL BAF 2020.pdf" target="_blank">Descargar</a>
                                 </div>
                             </div>
                         </div>
                     </div>                
-                    <p>Diciembre 2018</p>
+                    <p>Septiembre 2020</p>
                 </div>                            
             </div>
 <div class="reporte-nuevo">
